* Linux backend
  + Add CXLDevice attributes to CXL DAX objects and NUMA nodes to show
    which PCI device implements which window.
  + Ignore buggy memory-side caches and memory attributes when fake NUMA
    emulation is enabled on the Linux kernel command-line.
  + Add more info attributes in MemoryModule Misc objects,
    thanks to Zubiao Xiong for the patch.
* x86 backend
  + Add support for new AMD CPUID leaf 0x80000026 for better detection
    of Core Complex and Die on Zen4 processors.
  + Improve Zhaoxin topology detection in the x86 backend.
* Tools
  + Add --object-output to hwloc-calc to report the type as a prefix to
    object indexes, e.g. Core:2 instead of 2 in the output of -I.
  + hwloc-info --ancestor and --descendants now accepts kinds of objects
    instead of single types. --first may also keep only the first object.
  + Add --children-of-pid to hwloc-ps to show a hierarchy of processes.
    Thanks to Antoine Morvan for the suggestion.
  + Add --misc-from to lstopo to add Misc objects described in a file.
    - To be combined with the new hwloc-ps --lstopo-misc for a customizable
      lstopo --top replacement.
* Misc
  + lstopo may now configure the layout of memory object placed above,
    for instance with --children-order memory:above:vert.
  + Fix installation failures when configuring with --target,
    thanks to Clement Foyer for the patch.
  + Fix support for 128bit pointer architectures.
  + Remove Netloc.


Version 2.9.3
-------------
* Handle Linux glibc allocation errors in binding routines (CVE-2022-47022).
* Fix hwloc-calc when searching objects on heterogeneous memory platforms,
  thanks to Antoine Morvan for the report.
* Fix hwloc_get_next_child() when there are some memory-side caches.
* Don't crash if the topology is empty because Linux cgroups are wrong.
* Improve some hwloc-bind warnings in case of command-line parsing errors.
* Many documentation improvements all over the place, including: