@@ -29,6 +29,7 @@ Version 2.10.0
     emulation is enabled on the Linux kernel command-line.
   + Add more info attributes in MemoryModule Misc objects,
     thanks to Zubiao Xiong for the patch.
+  + Get CPUModel and CPUFamily info attributes on LoongArch.
 * x86 backend
   + Add support for new AMD CPUID leaf 0x80000026 for better detection
     of Core Complex and Die on Zen4 processors.
